[SO] Enhance Delete AS Workflow(s) to launch SO CNFM for Delete AS
Issue-ID: SO-3886
Signed-off-by: raviteja.karumuri <raviteja.karumuri@est.tech>
Change-Id: I7776fee0ea812e17052553e03a015863004e9f5d
Signed-off-by: raviteja.karumuri <raviteja.karumuri@est.tech>